Ongoing work on serializable (Android local) Game Board

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".gui.GameActivity">
 
+    <independent_study.ultimatetictactoe.gui.TicTacToeView
+        android:id="@+id/ticTacToeView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
