--- a/app/src/main/res/layout/activity_game_list.xml
+++ b/app/src/main/res/layout/activity_game_list.xml
@@ -26,7 +26,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="List of Games"
+        android:text="Queued Games"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
