--- a/app/src/main/res/layout/activity_game_list.xml
+++ b/app/src/main/res/layout/activity_game_list.xml
@@ -2,9 +2,33 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:gradient="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".gui.GameListActivity">
+
+<!--
+    <com.dynamitechetan.flowinggradient.FlowingGradient
+        android:id="@+id/mainGradient"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        gradient:transition_duration = "1000000"
+        gradient:transition_drawable="@drawable/trans"
+        />-->
+
+    <com.skyfishjy.library.RippleBackground
+        android:id="@+id/rippleView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:rb_radius="32dp"
+        app:rb_rippleAmount="4"
+        app:rb_duration="3000"
+        app:rb_scale="6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/listViewList"
