Finalized (if buggy) code

--- a/app/src/main/res/drawable/gradient_c.xml
+++ b/app/src/main/res/drawable/gradient_c.xml
@@ -4,8 +4,8 @@
 
     <gradient
         android:angle="135"
-        android:endColor="@color/colorPrimary"
-        android:startColor="@color/colorPrimaryDark"
+        android:endColor="@color/colorRed"
+        android:startColor="@color/colorBlue"
         android:type="linear" />
 
     <corners
